--- a/src/stylesheets/grid.scss
+++ b/src/stylesheets/grid.scss
@@ -13,6 +13,10 @@
     grid-template-columns: 1fr !important;
 }
 
+.align-top {
+    align-self: start !important;
+}
+
 .grid-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -50,7 +54,7 @@
                 transition: 0.3s all ease;
 
                 &:hover {
-                    cursor: pointer;
+                    cursor: zoom-in;
                     transform: scale(1);
                     transition: 0.3s all ease;
                 }
